@@ -57,9 +57,6 @@ password=""/>
 
   <autotools id="openobex">
     <branch repo="maemo.org-connectivity" module="openobex/tags/openobex-1.3osso1" checkoutdir="openobex-1.3osso1" />
-    <dependencies>
-      <dep package="openobex" />
-    </dependencies>
   </autotools>
 
   <autotools id="bluez-libs"> <!-- The .pc file is just called bluez. murrayc -->
